--- a/app/views/user/createUser.hbs
+++ b/app/views/user/createUser.hbs
@@ -41,7 +41,7 @@
                                         <div class="form-group">
                                             <label for="newUsername">Username</label>
                                             <input class="form-control" name="username" type="text"
-                                                   value="{{newUser.username}}"/>
+                                                   value=""/>
                                         </div>
                                         <div class="form-group">
                                             <label for="newName">Name</label>
