--- a/app/views/user/myDocs.hbs
+++ b/app/views/user/myDocs.hbs
@@ -1,4 +1,3 @@
-
 <div class="container">
 
   <div class="row">
@@ -7,22 +6,22 @@
       <div class="list-group">
         <a href="/" class="list-group-item"> Home</a>
         {{#if_eq user.userRoleId 2}}
-        <a href="/user/archieve" class="list-group-item">E-archive list</a>
-        <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/archieve" class="list-group-item">E-archive list</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
         {{#if_eq user.userRoleId 1}}
-        <a href="/user/archieve" class="list-group-item">E-archive list</a>
-        <a href="/user/createUser" class="list-group-item">Create User</a>
-        <a href="/user/myDocs" class="list-group-item active"> My documents</a>
-        <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
-        <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/archieve" class="list-group-item">E-archive list</a>
+          <a href="/user/createUser" class="list-group-item">Create User</a>
+          <a href="/user/myDocs" class="list-group-item active"> My documents</a>
+          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
         {{#if_eq user.userRoleId 3}}
-        <a href="/user/myDocs" class="list-group-item active"> My documents</a>
-        <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
-        <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/myDocs" class="list-group-item active"> My documents</a>
+          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
 
@@ -31,39 +30,52 @@
     <div class="col-lg-9">
       <div class="card">
         <div class="card-body">
-        <h4>My Documents</h4>
-        <div class="table-responsive">
-          <table id="mytable" class="table table-bordred table-stipped">
-            <thead>
+          <h4>My Documents</h4>
+          <div class="table-responsive">
+            <table id="mytable" class="table table-bordred table-stipped">
+              <thead>
               <th>File name</th>
+              <th>Description</th>
+              <th>Document Type</th>
               <th>Download link</th>
               <th>Send to</th>
-            <thead>
-        <tbody>
-          <tr>
-            {{#each docList}}
-          <td>{{name}}</td>
-
-          <td><a href="/user/downloadDoc/{{id}}">Download</a></td>
-          <td>
-            <div class="">
-            <form class="" action="/user/createDocToUser" method="post">
-            <input hidden="true" type="number" name="docId" value="{{id}}">
-            <label for="">Send To:  </label>
-            <select class="" name="userId">
-            {{#each ../userList}}
-            <option value="{{id}}">{{username}}</option>
-            {{/each}}
-            </select>
-            <button class="" type="submit" >Send</button>
-            </form><br>
-            </div>
-          </td>
-        </tr>
-        {{/each}}
-        </tbody>
-        </table>
+              <th></th>
+              <thead>
+              <tbody>
+              <tr>
+              {{#each docList}}
+                  <td>{{name}}</td>
+                  <td>{{description}}</td>
+                {{#each ../docTypes}}
+                  {{#if_eq ../docTypeId id}}
+                      <td>{{name}}</td>
+                  {{/if_eq}}
+                {{/each}}
+                  <td><a href="/user/downloadDoc/{{id}}">Download</a></td>
+                  <td>
+                    <div class="">
+                      <form class="" action="/user/createDocToUser" method="post">
+                        <input hidden="true" type="number" name="docId" value="{{id}}">
+                        <label for="">Send To: </label>
+                        <select class="" name="userId">
+                          {{#each ../userList}}
+                            <option value="{{id}}">{{username}}</option>
+                          {{/each}}
+                        </select>
+                        <button class="" type="submit">Send</button>
+                      </form>
+                      <br>
+                    </div>
+                  </td>
+                  <form action="/user/documentDelete/{{id}}" method="post">
+                    <td><button type="submit" name="Delete" value="" class="btn-link">Delete</button></td>
+                  </form>
+                </tr>
+              {{/each}}
+              </tbody>
+            </table>
+          </div>
         </div>
-        </div>
+      </div>
     </div>
-  </div></div>
+  </div>
