--- a/app/views/user/archive.hbs
+++ b/app/views/user/archive.hbs
@@ -1,4 +1,3 @@
-
 <div class="container">
 
   <div class="row">
@@ -7,22 +6,24 @@
       <div class="list-group">
         <a href="/" class="list-group-item"> Home</a>
         {{#if_eq user.userRoleId 2}}
-        <a href="/user/archieve" class="list-group-item active">E-archive list</a>
-        <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/archieve" class="list-group-item active">E-archive list</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/myDocs" class="list-group-item"> My documents</a>
+          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
         {{/if_eq}}
 
         {{#if_eq user.userRoleId 1}}
-        <a href="/user/archieve" class="list-group-item active">E-archive list</a>
-        <a href="/user/createUser" class="list-group-item">Create User</a>
-        <a href="/user/myDocs" class="list-group-item"> My documents</a>
-        <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
-        <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/archieve" class="list-group-item">E-archive list</a>
+          <a href="/user/createUser" class="list-group-item">Create User</a>
+          <a href="/user/myDocs" class="list-group-item active"> My documents</a>
+          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
         {{#if_eq user.userRoleId 3}}
-        <a href="/user/myDocs" class="list-group-item"> My documents</a>
-        <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
-        <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+          <a href="/user/myDocs" class="list-group-item"> My documents</a>
+          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
 
@@ -31,30 +32,43 @@
     <div class="col-lg-9">
       <div class="card">
         <div class="card-body">
-        <h4>Archive</h4>
-        <form id="signup" name="search" method="post" action="/user/search">
-          <input name="search" type="text" />
-          <button  type="submit" >Search</button>
-        </form>
+          <h4>Archive</h4>
+          <form id="signup" name="search" method="post" action="/user/search">
+            <input name="search" type="text"/>
+            <button type="submit">Search</button>
+          </form>
 
-        <div class="table-responsive">
-          <table id="mytable" class="table table-bordred table-stipped">
-            <thead>
+          <div class="table-responsive">
+            <table id="mytable" class="table table-bordred table-stipped">
+              <thead>
               <th>File name</th>
-              <th>Download</th>
-              <th>Date</th>
-            <thead>
-        <tbody>
-          <tr>
-            {{#each archive}}
-              <td>{{name}}</td>
-          <td><a href="/user/downloadDoc/{{../id}}">Download</a></td>
-          <td>{{createdAt}}</td>
-        </tr>
-        {{/each}}
+              <th>Description</th>
+              <th>Document Type</th>
+              <th>Download link</th>
+              <th>Author</th>
+              <th></th>
+              <thead>
+              <tbody>
+              <tr>
+              {{#each docList}}
+                  <td>{{name}}</td>
+                  <td>{{description}}</td>
+                {{#each ../docTypes}}
+                  {{#if_eq ../docTypeId id}}
+                      <td>{{name}}</td>
+                  {{/if_eq}}
+                {{/each}}
+                  <td><a href="/user/downloadDoc/{{id}}">Download</a></td>
 
-        </tbody>
-        </table>
+                {{#each ../userList}}
+                  {{#if_eq ../userId id }}
+                      <td>{{username}}</td>
+                  {{/if_eq}}
+                {{/each}}
+                </tr>
+              {{/each}}
+              </tbody>
+            </table>
+          </div>
         </div>
-        </div>
-    </div>
+      </div>
