--- a/app/views/user/createUser.hbs
+++ b/app/views/user/createUser.hbs
@@ -40,8 +40,7 @@
                                     <form id="signup" name="signup" method="post" action="/user/createUser">
                                         <div class="form-group">
                                             <label for="newUsername">Username</label>
-                                            <input class="form-control" name="username" type="text"
-                                                   value=""/>
+                                            <input class="form-control" name="username" type="text"/>
                                         </div>
                                         <div class="form-group">
                                             <label for="newName">Name</label>
@@ -78,81 +77,4 @@
 
 
 <script type="text/javascript">
-
-    //Select Country
-    $.ajax({
-        url: '/api/user/getCountryList',
-        type: "GET",
-        dataType: "json",
-        success: function (data) {
-            $.each(data, function (i, item) {
-                $.each(item, function (j, country) {
-                    $('#selectCountry').append($('<option>', {
-                        value: country.id,
-                        text: country.name
-                    }));
-                }) // inner loop
-            }); //outer loop
-        }
-    });
-
-    //Select Region by Country
-
-    $('#selectCountry').change(function () {
-        var selectedCountry = this.value
-        console.log(selectedCountry);
-        url1 = "/api/user/getRegionList/" + this.value;
-        $('#selectRegion').empty();
-
-        $('#selectRegion').append($('<option>', {
-            value: '0',
-            text: 'Регион'
-        }));
-        $.ajax({
-            url: url1,
-            type: "GET",
-            dataType: "json",
-            success: function (data) {
-                $.each(data, function (i, item) {
-                    $.each(item, function (j, region) {
-                        $('#selectRegion').append($('<option>', {
-                            value: region.id,
-                            text: region.name
-                        }));
-                    }) // inner loop
-                }); //outer loop
-            }
-        });
-    });
-
-
-    $('#selectRegion').change(function () {
-        var selectedRegion = this.value
-        console.log(selectedRegion);
-        url1 = "/api/user/getBranchList/" + this.value;
-        $('#selectBranch').empty();
-
-        $('#selectBranch').append($('<option>', {
-            value: '0',
-            text: 'Филиал'
-        }));
-
-        $.ajax({
-            url: url1,
-            type: "GET",
-            dataType: "json",
-            success: function (data) {
-                $.each(data, function (i, item) {
-                    $.each(item, function (j, branch) {
-                        $('#selectBranch').append($('<option>', {
-                            value: branch.id,
-                            text: branch.name
-                        }));
-
-                    }) // inner loop
-                }); //outer loop
-            }
-        });
-    });
-
 </script>
