--- a/app/views/user/archive.hbs
+++ b/app/views/user/archive.hbs
@@ -13,18 +13,18 @@
         {{/if_eq}}
 
         {{#if_eq user.userRoleId 1}}
-          <a href="/user/archieve" class="list-group-item">E-archive list</a>
+          <a href="/user/archieve" class="list-group-item active">E-archive list</a>
           <a href="/user/createUser" class="list-group-item">Create User</a>
-          <a href="/user/myDocs" class="list-group-item active"> My documents</a>
-          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
-          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
-        {{/if_eq}}
-
-        {{#if_eq user.userRoleId 3}}
           <a href="/user/myDocs" class="list-group-item"> My documents</a>
           <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
           <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
+
+        <!-- {{#if_eq user.userRoleId 3}}
+          <a href="/user/myDocs" class="list-group-item"> My documents</a>
+          <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
+          <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
+        {{/if_eq}} -->
 
 
       </div>
