--- a/app/views/user/createDocsView.hbs
+++ b/app/views/user/createDocsView.hbs
@@ -19,11 +19,11 @@
         <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
-        {{#if_eq user.userRoleId 3}}
+        <!-- {{#if_eq user.userRoleId 3}}
         <a href="/user/myDocs" class="list-group-item"> My documents</a>
         <a href="/user/createDocsView" class="list-group-item active">Upload Document</a>
         <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
-        {{/if_eq}}
+        {{/if_eq}} -->
 
 
       </div>
