--- a/app/views/user/inboxDocs.hbs
+++ b/app/views/user/inboxDocs.hbs
@@ -7,7 +7,7 @@
         <a href="/" class="list-group-item"> Home</a>
         {{#if_eq user.userRoleId 2}}
           <a href="/user/archieve" class="list-group-item">E-archive list</a>
-          <a href="/user/createUser" class="list-group-item">Create User</a>
+          <!-- <a href="/user/createUser" class="list-group-item">Create User</a> -->
           <a href="/user/myDocs" class="list-group-item"> My documents</a>
           <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
           <a href="/user/inboxDocs" class="list-group-item active">Inbox Docs</a>
@@ -21,11 +21,11 @@
           <a href="/user/inboxDocs" class="list-group-item active">Inbox Docs</a>
         {{/if_eq}}
 
-        {{#if_eq user.userRoleId 3}}
+        <!-- {{#if_eq user.userRoleId 3}}
           <a href="/user/myDocs" class="list-group-item"> My documents</a>
           <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
           <a href="/user/inboxDocs" class="list-group-item active">Inbox Docs</a>
-        {{/if_eq}}
+        {{/if_eq}} -->
 
       </div>
     </div>
@@ -54,7 +54,7 @@
                   <td>{{msg}}</td>
                   <td>{{Status.name}}</td>
                   <td>
-                    
+
                   </td>
                 </tr>
               {{/each}}
