--- a/app/views/user/myDocs.hbs
+++ b/app/views/user/myDocs.hbs
@@ -20,11 +20,11 @@
           <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
         {{/if_eq}}
 
-        {{#if_eq user.userRoleId 3}}
+        <!-- {{#if_eq user.userRoleId 3}}
           <a href="/user/myDocs" class="list-group-item active"> My documents</a>
           <a href="/user/createDocsView" class="list-group-item">Upload Document</a>
           <a href="/user/inboxDocs" class="list-group-item">Inbox Docs</a>
-        {{/if_eq}}
+        {{/if_eq}} -->
 
 
       </div>
